--- a/samples/cassandra/build.gradle
+++ b/samples/cassandra/build.gradle
@@ -5,5 +5,5 @@ repositories {
 }
 
 dependencies {
-  compile "com.datastax.cassandra:cassandra-driver-core:3.1.0"
+  compile "org.apache.cassandra:cassandra-all:3.10"
 }
